# CSTL

./: CMakeLists.txt  common.h  specification.txt  test.c
lib/: logger.c  logger.h
src/allocator/: arena.c  arena.h
src/containers/: vector.c  vector.h
src/iterators/: randomAcessIter.c  randomAcessIter.h  vector_iter.h
src/shared/: result.h  typeDeduction.h
